--- a/module/Application/view/partials/time-limit-row.phtml
+++ b/module/Application/view/partials/time-limit-row.phtml
@@ -1,8 +1,7 @@
 <?php
-$limits = $this->limits;
 ?>
 <div class="rule-div limit-rules <?= $this->class ?>" style="clear: both;">
-    <div class="control-group col-sm-2">
+    <div class="control-group col-sm-3">
         <div class="input-group clockpicker">
             <input type="text" class="from form-control" placeholder="<?= $this->translate("dalle"); ?>" value="<?= $this->from ?>">
             <span class="input-group-addon">
@@ -10,7 +9,7 @@ $limits = $this->limits;
             </span>
         </div>
     </div>
-    <div class="control-group col-sm-2">
+    <div class="control-group col-sm-3">
         <div class="input-group clockpicker">
             <input type="text" class="to form-control" placeholder="<?= $this->translate("alle"); ?>" value="<?= $this->to ?>">
             <span class="input-group-addon">
@@ -18,7 +17,7 @@ $limits = $this->limits;
             </span>
         </div>
     </div>
-    <div class="control-group col-sm-1">
+    <div class="control-group">
         <div class="remove-times btn btn-icon-only">
             <i class="glyphicon glyphicon-remove"></i>
         </div>
