--- a/module/Application/view/application/invoices/invoices.phtml
+++ b/module/Application/view/application/invoices/invoices.phtml
@@ -67,7 +67,7 @@ $this->headScript()
                 <div class="portlet box green">
                     <div class="portlet-title">
                         <div class="caption">
-                            <i class="fa fa-cogs"></i><?= $this->translate("Elenco Fatture"); ?>
+                            <i class="fa fa-book"></i><?= $this->translate("Elenco Fatture"); ?>
                         </div>
                     </div>
                     <div class="portlet-body">
