--- a/module/Application/view/application/payments/payments.phtml
+++ b/module/Application/view/application/payments/payments.phtml
@@ -95,7 +95,7 @@ $this->headScript()
                 <div class="portlet box green">
                     <div class="portlet-title">
                         <div class="caption">
-                            <i class="fa fa-cogs"></i><?= $this->translate("Elenco Pagamenti"); ?>
+                            <i class="fa fa-money"></i><?= $this->translate("Elenco Pagamenti"); ?>
                         </div>
                     </div>
                     <div class="portlet-body">
