--- a/module/Application/view/application/time-packages/buy.phtml
+++ b/module/Application/view/application/time-packages/buy.phtml
@@ -20,7 +20,7 @@ $this->headLink()
         <div class="portlet box green">
             <div class="portlet-title">
                 <div class="caption">
-                    <i class="fa fa-cogs"></i><?= $this->translate("Elenco pacchetti acquistabili"); ?>
+                    <i class="fa fa-gift"></i><?= $this->translate("Elenco pacchetti acquistabili"); ?>
                 </div>
             </div>
             <div class="portlet-body">
