--- a/module/Application/view/application/fares/fares.phtml
+++ b/module/Application/view/application/fares/fares.phtml
@@ -10,7 +10,7 @@
         <div class="portlet box green">
             <div class="portlet-title">
                 <div class="caption">
-                    <i class="fa fa-cogs"></i><?= $this->translate("Tariffa attuale"); ?>
+                    <i class="fa fa-calendar"></i><?= $this->translate("Tariffa attuale"); ?>
                 </div>
             </div>
             <div class="portlet-body">
