--- a/module/Application/view/application/time-packages/time-packages.phtml
+++ b/module/Application/view/application/time-packages/time-packages.phtml
@@ -26,7 +26,7 @@ $this->headScript()
         <div class="portlet box green">
             <div class="portlet-title">
                 <div class="caption">
-                    <i class="fa fa-cogs"></i><?= $this->translate("Elenco Pacchetti minuti"); ?>
+                    <i class="fa fa-gift"></i><?= $this->translate("Elenco Pacchetti minuti"); ?>
                 </div>
             </div>
             <div class="portlet-body">
