--- a/module/Application/view/application/payments/payments.phtml
+++ b/module/Application/view/application/payments/payments.phtml
@@ -104,6 +104,7 @@ $this->headScript()
                         <table class="table table-striped table-bordered table-hover" id="js-business-payments-table">
                             <thead>
                             <tr>
+                                <th><?= $this->translate("ID"); ?></th>
                                 <th><?= $this->translate("Data inserimento"); ?></th>
                                 <th><?= $this->translate("Tipologia"); ?></th>
                                 <th><?= $this->translate("Importo"); ?></th>
