csd-2459-180515-remove-penale: upadte 18:02

--- a/module/Application/view/application/payments/payments.phtml
+++ b/module/Application/view/application/payments/payments.phtml
@@ -41,7 +41,7 @@ $this->headScript()
                                 <select name="js-payment-type" id="js-payment-type" class="form-control" style="display: none;">
                                     <option value="<?= BusinessPayment::TYPE_PACKAGE ?>"><?= $this->translate("Pacchetto minuti"); ?></option>
                                     <option value="<?= BusinessPayment::TYPE_TRIP ?>"><?= $this->translate("Corsa"); ?></option>
-                                    <option value="<?= BusinessPayment::TYPE_EXTRA ?>"><?= $this->translate("Extra/penale"); ?></option>
+                                    <option value="<?= BusinessPayment::TYPE_EXTRA ?>"><?= $this->translate("Extra"); ?></option>
                                     <option value="<?= BusinessPayment::TYPE_SUBSCRIPTION ?>"><?= $this->translate("Sottoscrizione"); ?></option>
                                 </select>
                                 <select name="js-payment-status" id="js-payment-status" class="form-control" style="display: none;">
