--- a/module/Application/view/partials/translations.phtml
+++ b/module/Application/view/partials/translations.phtml
@@ -32,6 +32,11 @@
         'renderTrip': '<?= $this->translate("Corse") ?>',
         'renderPenality': '<?= $this->translate("Sanzione") ?>',
         'renderBonusPackage': '<?= $this->translate("Pacchetto bonus") ?>',
+
+        'sVatNumberErrorLength': '<?= $this->translate("La lunghezza della partita IVA non è corretta: la partita IVA dovrebbe essere lunga esattamente 11 caratteri.") ?>',
+        'sVatNumberErrorChars': '<?= $this->translate("La partita IVA contiene un carattere non valido. I caratteri validi sono solo le cifre.") ?>',
+        'sVatNumberErrorNoMatch': '<?= $this->translate("La partita IVA non è valida: il codice di controllo non corrisponde.") ?>',
+
 };
 
     function translate(key) {
